# git-rs

./: :w  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: commands.rs  main.rs  objects.rs
src/commands/: cat_file.rs  commit.rs  commit_tree.rs  hash_object.rs  ls_file.rs  ls_tree.rs  update_index.rs  write_tree.rs
