[package]
name = "codecrafters-git"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.100"
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.0.34"                                # compression
sha1 = "0.10.6"
