[package]
name = "codecrafters-git"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.100"
bytes = "1.3.0" 
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.0.34"
hex = "0.4.3"
ignore = "0.4.25"
rust-ini = "0.21.3"
sha1 = "0.10.6"
